--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,29 +1,21 @@
 ---
 galaxy_info:
   author: thulium_drake
-  description: Some role template
-  role_name: template
+  description: Edge Image Builder
+  role_name: edge_image_builder
 
   license: GPLv3
 
   min_ansible_version: '2.10'
 
   platforms:
-    - name: Debian
-      versions:
-        - buster
-        - bullseye
-    - name: Ubuntu
-      versions:
-        - bionic
-        - focal
     - name: EL
       versions:
-        - '7'
-        - '8'
+        - '9'
 
   galaxy_tags:
-    - some
-    - tags
+    - device
+    - edge
+    - osbuild
 
 dependencies: []
