Added logic to set up boot images

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,3 +36,4 @@ edge_image_builder_nameservers: '8.8.8.8'
 edge_image_builder_subnet: '192.168.1.0/24'
 edge_image_builder_router: '192.168.1.1'
 edge_image_builder_server_ip: '192.168.1.10'
+edge_image_builder_bootiso_download: 'https://download.fedoraproject.org/pub/fedora/linux/releases/39/Server/x86_64/iso/Fedora-Server-netinst-x86_64-39-1.5.iso'
