--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -100,3 +100,32 @@
 - name: 'Configure deployment server'
   ansible.builtin.include_tasks: 'tasks/deployment_server.yml'
   when: edge_image_builder_deployment_server | bool
+
+- name: 'Build blueprints'
+  when: edge_image_builder_make_blueprints | bool
+  block:
+    - name: 'Make a list of all available blueprints'
+      ansible.builtin.find:
+        paths: '/etc/osbuild-composer/blueprints'
+        patterns: '*.toml'
+        file_type: 'file'
+      register: 'edge_image_builder_blueprint_files'
+
+    - name: 'Collect blueprint filenames'
+      ansible.builtin.set_fact:
+        edge_image_builder_blueprints: "{{ (edge_image_builder_blueprints | default([])) + [item | basename | regex_replace('.toml', '')] }}"
+      loop: "{{ edge_image_builder_blueprint_files['files'] | map(attribute='path') }}"
+
+    - name: 'Build blueprint'
+      ansible.builtin.include_tasks: 'tasks/make_blueprint.yml'
+      loop: "{{ edge_image_builder_blueprints }}"
+      loop_control:
+        loop_var: 'blueprint'
+
+    - name: 'Update PXEboot menu'
+      ansible.builtin.template:
+        src: 'pxelinux.cfg.j2'
+        dest: '/var/lib/tftpboot/pxelinux.cfg/default'
+        owner: 'root'
+        group: 'root'
+        mode: '0644'
