--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,16 +12,16 @@ edge_image_builder_repo_baseurl: 'https://cdn.redhat.com'
 edge_image_builder_pull_secret: ''
 
 # Extra repositories to add to osbuild-composer
-edge_image_builder_repos:
-  - id: 'example-repo'              # Name of the repo
-    name: 'Example repo'            # Description
-    type: 'yum-baseurl'             # yum-baseurl or yum-mirrorlist
-    url: 'https://example.com/yum'  # Actual URL for repo
-    distros:
-      - 'rhel-9'  # You can also use {{ edge_image_builder_distro_id }}
-    check_gpg: true                 # Check GPG signatures for packages in repo
-    check_ssl: true                 # Check if repo has valid SSL settings
-    rhsm: false                     # True if the repo is hosted on a RHSM managed source
+edge_image_builder_repos: []
+#  - id: 'example-repo'              # Name of the repo
+#    name: 'Example repo'            # Description
+#    type: 'yum-baseurl'             # yum-baseurl or yum-mirrorlist
+#    url: 'https://example.com/yum'  # Actual URL for repo
+#    distros:
+#      - 'rhel-9'  # You can also use {{ edge_image_builder_distro_id }}
+#    check_gpg: true                 # Check GPG signatures for packages in repo
+#    check_ssl: true                 # Check if repo has valid SSL settings
+#    rhsm: false                     # True if the repo is hosted on a RHSM managed source
 
 ### Build blueprints
 # Set to true if you automatically want to build all blueprints found in /etc/osbuild-composer/blueprints
