--- a/tasks/deployment_server.yml
+++ b/tasks/deployment_server.yml
@@ -7,6 +7,29 @@
       - 'syslinux'
     state: 'present'
 
+- name: 'Ensure cache directory'
+  ansible.builtin.file:
+    path: '/var/cache/edge_image_builder'
+    state: 'directory'
+    group: 'root'
+    mode: '0700'
+
+- name: 'Download extra bootloader RPM files'
+  ansible.builtin.dnf:
+    name:
+      - 'shim-x64'
+      - 'grub2-efi-x64'
+    download_only: true
+    download_dir: '/var/cache/edge_image_builder'
+
+- name: 'Extract RPM files'
+  ansible.builtin.shell: |
+    set -o pipefail
+    cd /var/cache/edge_image_builder
+    rpm2cpio /var/cache/edge_image_builder/shim-x64-*.rpm | cpio -idm
+    rpm2cpio /var/cache/edge_image_builder/grub2-efi-x64-*.rpm | cpio -idm
+  changed_when: true
+
 - name: 'Ensure configuration files'
   ansible.builtin.template:
     src: "{{ config['src'] }}"
@@ -22,10 +45,10 @@
   loop_control:
     loop_var: 'config'
 
-- name: 'Ensure bootloader files'
+- name: 'Ensure bootloader files for BIOS'
   ansible.builtin.copy:
-    src: "/usr/share/syslinux/{{ bootloader }}"
-    dest: "/var/lib/tftpboot/{{ bootloader }}"
+    src: "/usr/share/syslinux/{{ bios_bootloader }}"
+    dest: "/var/lib/tftpboot/{{ bios_bootloader }}"
     owner: 'root'
     group: 'root'
     mode: '0644'
@@ -36,24 +59,44 @@
     - 'menu.c32'
     - 'pxelinux.0'
   loop_control:
-    loop_var: 'bootloader'
+    loop_var: 'bios_bootloader'
+
+- name: 'Ensure bootloader files for UEFI'
+  ansible.builtin.copy:
+    src: "/var/cache/edge_image_builder/boot/efi/EFI/redhat/{{ uefi_bootloader }}"
+    dest: "/var/lib/tftpboot/{{ uefi_bootloader }}"
+    owner: 'root'
+    group: 'root'
+    mode: '0644'
+    remote_src: true
+  loop:
+    - 'grubx64.efi'
+    - 'shim.efi'
+  loop_control:
+    loop_var: 'uefi_bootloader'
 
 - name: 'Download Boot ISO'
   ansible.builtin.get_url:
     url: "{{ edge_image_builder_bootiso_download }}"
-    dest: '/var/cache/osbuild-composer/boot.iso'
+    dest: '/var/cache/edge_image_builder/boot.iso'
     owner: 'root'
     group: 'root'
     mode: '0644'
 
-- name: 'Extract boot images from ISO'
+- name: 'Extract TFTP boot images from ISO'
   community.general.iso_extract:
-    image: '/var/cache/osbuild-composer/boot.iso'
+    image: '/var/cache/edge_image_builder/boot.iso'
+    dest: '/var/lib/tftpboot'
+    files:
+      - 'images/pxeboot/initrd.img'
+      - 'images/pxeboot/vmlinuz'
+
+- name: 'Extract liveboot image from ISO'
+  community.general.iso_extract:
+    image: '/var/cache/edge_image_builder/boot.iso'
     dest: '/var/www/html'
     files:
       - 'images/install.img'
-      - 'images/pxeboot/initrd.img'
-      - 'images/pxeboot/vmlinuz'
 
 - name: 'Ensure services'
   ansible.builtin.service:
