Added grub config template

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -137,13 +137,15 @@
 
     - name: 'Update PXEboot menu'
       ansible.builtin.template:
-        src: "{{ pxeboot['name'] }}.j2"
+        src: "{{ pxeboot['name'] }}"
         dest: "/var/lib/tftpboot/{{ pxeboot['dest'] }}"
         owner: 'root'
         group: 'root'
         mode: '0644'
       loop:
-        - name: 'pxelinux.cfg'
+        - name: 'pxelinux.cfg.j2'
           dest: 'pxelinux.cfg/default'
-        - name: 'grub.cfg'
+        - name: 'grub.cfg.j2'
           dest: 'grub.cfg'
+      loop_control:
+        loop_var: 'pxeboot'
