--- a/tasks/deployment_server.yml
+++ b/tasks/deployment_server.yml
@@ -14,13 +14,12 @@
     group: 'root'
     mode: '0700'
 
-- name: 'Download extra bootloader RPM files'
-  ansible.builtin.dnf:
-    name:
-      - 'shim-x64'
-      - 'grub2-efi-x64'
-    download_only: true
-    download_dir: '/var/cache/edge_image_builder'
+- name: 'Download extra bootloader RPM files'  # The dnf module does not download anything if it's already installed
+  ansible.builtin.shell: |
+    set -o pipefail
+    cd /var/cache/edge_image_builder
+    dnf download shim-x64 grub2-efi-x64
+  changed_when: true
 
 - name: 'Extract RPM files'
   ansible.builtin.shell: |
