--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,7 @@
       - 'createrepo_c'
       - 'httpd'
       - 'osbuild-composer'
+      - 'ansible-core'
     state: 'present'
   notify: 'Reboot system'
 
