Added note why we reboot after installing packages

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
       - 'composer-cli'
       - 'createrepo_c'
       - 'httpd'
-      - 'osbuild-composer'
+      - 'osbuild-composer'  # requires a reboot
       - 'ansible-core'
     state: 'present'
   notify: 'Reboot system'
