--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -68,6 +68,7 @@
     - '/etc/osbuild-worker'
     - '/var/lib/tftpboot/pxelinux.cfg'
     - '/var/www/html/config-rpms'
+    - '/var/cache/edge_image_builder'
   loop_control:
     loop_var: 'directory'
 
@@ -92,15 +93,15 @@
 
 - name: 'Ensure default repository overrides'
   ansible.builtin.template:
-    src: "{{ distro_id }}.json.j2"
-    dest: "/etc/osbuild-composer/repositories/{{ distro_id }}.json"
+    src: "{{ distro['id'] }}.json.j2"
+    dest: "/etc/osbuild-composer/repositories/{{ distro['id'] }}.json"
     owner: 'root'
     group: 'root'
     mode: '0644'
   notify: 'Restart osbuild-composer'
   loop: "{{ edge_image_builder_distros }}"
   loop_control:
-    loop_var: 'distro_id'
+    loop_var: 'distro'
 
 - name: 'Ensure extra repo definitions'
   ansible.builtin.template:
@@ -119,6 +120,43 @@
   loop: "{{ edge_image_builder_repos + edge_image_builder_config_repo }}"
   loop_control:
     loop_var: 'repo'
+
+- name: 'Download Boot ISOs for distributions'
+  ansible.builtin.get_url:
+    url: "{{ distro['bootiso_url'] }}"
+    url_username: "{{ distro['bootiso_username'] | default(omit) }}"
+    url_password: "{{ distro['bootiso_password'] | default(omit) }}"
+    dest: "/var/cache/edge_image_builder/boot-{{ distro['id'] }}.iso"
+    force: false
+    owner: 'root'
+    group: 'root'
+    mode: '0644'
+  loop: "{{ edge_image_builder_distros }}"
+  loop_control:
+    loop_var: 'distro'
+
+- name: 'Ensure webserver directories'
+  ansible.builtin.file:
+    path: "/var/www/html/{{ distro['id'] }}"
+    state: 'directory'
+    owner: 'root'
+    group: 'root'
+    mode: '0755'
+  loop: "{{ edge_image_builder_distros }}"
+  loop_control:
+    loop_var: 'distro'
+
+- name: 'Extract liveboot image from ISOs'
+  community.general.iso_extract:
+    image: "/var/cache/edge_image_builder/boot-{{ distro['id'] }}.iso"
+    dest: "/var/www/html/{{ distro['id'] }}"
+    files:
+      - 'images/install.img'
+      - 'images/pxeboot/initrd.img'
+      - 'images/pxeboot/vmlinuz'
+  loop: "{{ edge_image_builder_distros }}"
+  loop_control:
+    loop_var: 'distro'
 
 - name: 'Configure deployment server'
   ansible.builtin.include_tasks: 'tasks/deployment_server.yml'
