--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -17,5 +17,8 @@ platforms:
     privileged: true
 provisioner:
   name: 'ansible'
+  config_options:
+    defaults:
+      roles_path: "$MOLECULE_PROJECT_DIRECTORY/.."
 verifier:
   name: 'ansible'
